# tomlex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/tomlex/: resolvers.hpp  serializer.hpp  tomlex.hpp
tests/: CMakeLists.txt  bad.toml  good.toml  pch.h  test.cpp
